--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>API YOUTUBE</title>
+  <title>API YOUTUBE y MAPS</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="estilo.css">
   <script src="search.js" type="text/javascript"></script>
   
   <script src="https://apis.google.com/js/client.js?onload=onClientLoad" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
+  
 
 
 </head>
@@ -15,7 +17,7 @@
     <div id="header">
         <input id="query" value='cats' type="text" /> 
         <button onclick="search()">Buscar</button>
-        <select>
+        <select id="resultados">
             <option value="5">5</option>
             <option value="10">10</option>
             <option value="20">20</option>
