--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <title>API YOUTUBE y MAPS</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="css/estilo.css">
+  <script src="js/bootstrap.min.js"></script>
   <script src="search.js" type="text/javascript"></script>
   
   <script src="https://apis.google.com/js/client.js?onload=onClientLoad" type="text/javascript"></script>
@@ -14,21 +17,20 @@
 </head>
 
 <body>
-    <div id="header">
-        <input id="query" value='cats' type="text" /> 
-        <button onclick="search()">Buscar</button>
-        <select id="resultados">
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option value="20">20</option>
-            <option value="30">30</option>
-            <option value="40">40</option>
-            <option value="50">50</option>
-          </select>
-    </div>
-    <div id="content">
+        <div class="jumbotron cabecera">
+            <div class="container">
+                <input id="query" value='cats' type="text" /> 
+                <button  class="btn btn-danger btn-lg" onclick="search()">Buscar</button>
+                <input id="resultados" type="number" min="0" max="50" value="5">
+            </div>
+        </div>
+    <!--div id="content">
         <div id = "info"></div>
         <pre id="response"></pre>
+    </div-->
+    <div class="container" id="errores"></div>
+    <div class="container">
+        <div class="row" id="info"></div>
     </div>
 
 </body>
